@@ -2,6 +2,12 @@ module ActionController
   module Assertions
     module DomAssertions
       # Test two HTML strings for equivalency (e.g., identical up to reordering of attributes)
+      #
+      # ==== Examples
+      #
+      #   # assert that the referenced method generates the appropriate HTML string
+      #   assert_dom_equal '<a href="http://www.example.com">Apples</a>', link_to("Apples", "http://www.example.com")
+      #
       def assert_dom_equal(expected, actual, message = "")
         clean_backtrace do
           expected_dom = HTML::Document.new(expected).root
@@ -13,6 +19,12 @@ module ActionController
       end
       
       # The negated form of +assert_dom_equivalent+.
+      #
+      # ==== Examples
+      #
+      #   # assert that the referenced method does not generate the specified HTML string
+      #   assert_dom_not_equal '<a href="http://www.example.com">Apples</a>', link_to("Oranges", "http://www.example.com")
+      #
       def assert_dom_not_equal(expected, actual, message = "")
         clean_backtrace do
           expected_dom = HTML::Document.new(expected).root
